crates/kula-core/tests/snapshots/export__example_05_married_siblings_cytoscape.snap
---
source: crates/kula-core/tests/export.rs
assertion_line: 116
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kula": "0.1",
  "graph": {
    "nodes": [
      {
        "data": {
          "id": "p:ramesh",
          "type": "person",
          "name": "Ramesh Sharma",
          "gender": "male",
          "born": {
            "value": "1925-03-10",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:sita",
          "type": "person",
          "name": "Sita Sharma",
          "gender": "female",
          "born": {
            "value": "1928-07-15",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:arjun",
          "type": "person",
          "name": "Arjun Sharma",
          "gender": "male",
          "born": {
            "value": "1950-04-12",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:priya",
          "type": "person",
          "name": "Priya Sharma",
          "gender": "female",
          "born": {
            "value": "1952-08-19",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:vikram",
          "type": "person",
          "name": "Vikram Sharma",
          "gender": "male",
          "born": {
            "value": "1955-02-28",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:nisha",
          "type": "person",
          "name": "Nisha Sharma",
          "gender": "female",
          "born": {
            "value": "1957-06-15",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_ramesh_sita",
          "type": "marriage",
          "start": {
            "value": "1948-06-10",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_arjun_priya",
          "type": "marriage",
          "start": {
            "value": "1975-11-04",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_vikram_nisha",
          "type": "marriage",
          "start": {
            "value": "1980-03-22",
            "precision": "day",
            "circa": false
          }
        }
      }
    ],
    "edges": [
      {
        "data": {
          "source": "m:m_ramesh_sita",
          "target": "p:ramesh",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_ramesh_sita",
          "target": "p:sita",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_arjun_priya",
          "target": "p:arjun",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_arjun_priya",
          "target": "p:priya",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_vikram_nisha",
          "target": "p:vikram",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_vikram_nisha",
          "target": "p:nisha",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_ramesh_sita",
          "target": "p:arjun",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_ramesh_sita",
          "target": "p:vikram",
          "type": "biological_child"
        }
      }
    ]
  }
}
