crates/kula-core/tests/snapshots/export__failure_envelope_missing_required_field.snap
---
source: crates/kula-core/tests/export.rs
expression: json
---
{
  "ok": false,
  "diagnostics": [
    {
      "code": "KULA-R03",
      "severity": "error",
      "message": "person `alice` needs a `name:` field — add `name:\"…\"` to the declaration",
      "primary": {
        "byte_start": 7,
        "byte_end": 12,
        "line": 1,
        "column": 8
      },
      "related": []
    }
  ]
}
