crates/kula-core/tests/snapshots/export__failure_envelope_unresolved_reference.snap
---
source: crates/kula-core/tests/export.rs
expression: json
---
{
  "ok": false,
  "diagnostics": [
    {
      "code": "KULA-R02",
      "severity": "error",
      "message": "no person with id `ghost` is declared in this file — check for a typo, or add a `person ghost …` declaration",
      "primary": {
        "byteStart": 57,
        "byteEnd": 62,
        "line": 2,
        "column": 18
      },
      "related": []
    }
  ]
}
